# pencil-box

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
code_coverage/: tarpaulin-report.html  tarpaulin-report.md  v_0.1.10.md  v_0.1.4.html  v_0.1.4.md  v_0.1.6.md  v_0.1.8.md
src/: lib.rs
src/array/: chunk.rs  compact.rs  difference.rs  drop_end.rs  drop_start.rs  fill_default.rs  fill_value.rs  find_index.rs  find_indexes.rs  find_last_index.rs  flatten.rs  intersection.rs  mod.rs  uniq.rs
tests/: test_results.txt
tests/array/: chunk.rs  compact.rs  difference.rs  drop_end.rs  drop_start.rs  fill_default.rs  fill_value.rs  find_index.rs  find_indexes.rs  find_last_index.rs  flatten.rs  intersection.rs  mod.rs  uniq.rs
