[package]
name = "pencil-box"
version = "0.1.4"
edition = "2021"
description = "A versatile Rust utility library, inspired by JavaScript's Lodash, providing common helper functions for collections, strings, numbers, and more, with no external dependencies."
readme = "README.md"
homepage = "https://github.com/rocketnozzle/pencil-box"
repository = "https://github.com/rocketnozzle/pencil-box"
license = "MIT"
keywords = ["utility", "lodash", "collections", "helpers"]
categories = ["development-tools::build-utils"]
authors = ["rocketnozzle.io"]

exclude = [
    "tests/*",
    "examples/*",
    "benches/*",
    "test_data/*",
    ".github/*",
    "*.rs.bak",
]

[dependencies]
ahash = "0.8.12"

[dev-dependencies]
rand = "0.8"
