[package]
name = "pencil-box"
version = "0.1.8"
edition = "2021"
description = "An idiomatic, high-performance Rust crate inspired by Lodash—packed with everyday utilities to simplify and reduce boilerplate when working with collections, strings, numbers, and more."
readme = "README.md"
homepage = "https://github.com/rocketnozzle/pencil-box"
repository = "https://github.com/rocketnozzle/pencil-box"
license = "MIT"
keywords = ["utility", "lodash", "array", "strings", "collections"]
categories = ["development-tools::build-utils"]
authors = ["rocketnozzle.io"]

exclude = [
    "tests/*",
    "examples/*",
    "benches/*",
    "test_data/*",
    ".github/*",
    "*.rs.bak",
]

[dependencies]
ahash = "0.8.12"

[dev-dependencies]
rand = "0.8"
