[package]
name = "pencil-box"
version = "0.1.10"
edition = "2021"
description = "A performance-focused, memory-efficient utility library for Rust — built for engineers who care about speed, safety, and maintainability."
readme = "README.md"
homepage = "https://github.com/rocketnozzle/pencil-box"
repository = "https://github.com/rocketnozzle/pencil-box"
license = "MIT"
keywords = ["utility", "lodash", "array", "strings", "collections"]
categories = ["development-tools::build-utils"]
authors = ["rocketnozzle.io"]

exclude = [
    "tests/*",
    "examples/*",
    "benches/*",
    "test_data/*",
    ".github/*",
    "*.rs.bak",
]

[dependencies]
ahash = "0.8.12"

[dev-dependencies]
rand = "0.8"
